--- a/index.html
+++ b/index.html
@@ -121,41 +121,64 @@
                 <div class="works__timeline-item">
                     <div class="item-content">
                         <span class="date">
-                            <span class="month">Jan</span>
-                            <span class="year">2014</span>
+                            <span class="month">Sept</span>
+                            <span class="year">2017</span>
                         </span>
-                        <h2>2017</h2>
-                        <p>Lorem ipsum..</p>
+                        <h2>Link Mobility Spain</h2>
+                        <h4>IT TECHNICIAN</h4>
+                        <p>Desarrollo de script personalizados para clientes en PHP, explotación de bases de datos, funciones
+                            de desarrollo de campañas de mailing. Routing and architecture manager y Delivery and Support
+                            CRM manager.</p>
                     </div>
                 </div>
                 <div class="works__timeline-item">
                     <div class="item-content">
                         <span class="date">
-                            <span class="month">Jan</span>
-                            <span class="year">2015</span>
+                            <span class="month">Jun</span>
+                            <span class="year">2016</span>
                         </span>
-                        <h2>2016</h2>
-                        <p>Lorem ipsum..</p>
+                        <h2>GMS - Global Messaging Solutions</h2>
+                        <h4>PROGRAMADOR JUNIOR</h4>
+                        <p>Desarrollo de script personalizados para clientes en PHP, explotación de bases de datos, funciones
+                            de desarrollo de campañas de mailing. Routing and architecture manager y Delivery and Support
+                            CRM manager.</p>
                     </div>
                 </div>
                 <div class="works__timeline-item">
                     <div class="item-content">
                         <span class="date">
-                            <span class="month">Jan</span>
-                            <span class="year">2015</span>
+                            <span class="month">Ene</span>
+                            <span class="year">2016</span>
                         </span>
-                        <h2>2016</h2>
-                        <p>Lorem ipsum..</p>
+                        <h2>TEC Madrid</h2>
+                        <h4>DISEÑADOR Y DESARROLLADOR WEB</h4>
+                        <p>Diseño y desarrollo web plantilla personalizada con diseño responsive bajo el CMS e-commerce Prestashop,
+                            implementación de pasarela de pago y sincronización de almacen online con ERP.</p>
                     </div>
                 </div>
                 <div class="works__timeline-item">
                     <div class="item-content">
                         <span class="date">
-                            <span class="month">Jan</span>
-                            <span class="year">2015</span>
+                            <span class="month">Abr</span>
+                            <span class="year">2013</span>
                         </span>
-                        <h2>2016</h2>
-                        <p>Lorem ipsum..</p>
+                        <h2>ACCENTURE</h2>
+                        <h4>BECARIO</h4>
+                        <p>Desarrollo de aplicaciones de escritorio y web en JAVA, con conexiones a bases de datos, creación
+                            de interfaz con el usuario con Framework Bluefish.</p>
+                    </div>
+                </div>
+                <div class="works__timeline-item">
+                    <div class="item-content">
+                        <span class="date">
+                            <span class="month">Abr</span>
+                            <span class="year">2011</span>
+                        </span>
+                        <h2>GENETSIS</h2>
+                        <h4>MAQUETADOR WEB</h4>
+                        <p>Realización de newsletters, mailing interno y maquetación mediante plantilla en photoshop de sitios
+                            web.
+                        </p>
                     </div>
                 </div>
             </div>
