add hover to menu

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
         <section id="contacto" class="section-container">
             <div class="container">
-                <h2 class="section__title">Ponte en marcha</h2>
+                <h2 class="section__title">Ponte en contacto</h2>
                 <form name="contact" method="get" class="form__contact">
                     <div class="form-col">
                         <div class="form-col__left">
