--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <i class="fa fa-chevron-up"></i>
         </span>
         <nav class="navbar">
-            <a href="#page-top">
+            <span class="logo-arriba">
                 <img src="./images/logo.png" alt="logoDcMenu" class="navbar__logo">
-            </a>
+            </span>
             <div class="navbar__container">
                 <ul class="navbar__list">
                     <li class="navbar__item ">
