add ajax and validate for form

--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
         </footer>
 
         <script src="./js/smoothScroll.js"></script>
+        <script src="./js/scripts/validateForm.js"></script>
+        <script src="./js/scripts/ajax.js"></script>
     </body>
 
     </html>
