--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         </div>
                         <div class="form-col__right">
                             <div class="form-row">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="Comenta"></textarea>
+                                <textarea name="comtentario" id="comtentario" cols="30" rows="10" placeholder="Comenta"></textarea>
                             </div>
                         </div>
                     </div>
