--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <section id="contacto" class="section-container">
             <div class="container">
                 <h2 class="section__title">Ponte en contacto</h2>
-                <form name="contact" method="get" class="form__contact">
+                <form name="contact" method="get" class="form__contact" novalidate>
                     <div class="form-col">
                         <div class="form-col__left">
                             <div class="form-row">
