--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <link rel="icon" type="image/png" href="./images/icon.png">
+        <link href="./images/iconCopia.ico" rel="shortcut icon" type="image/png">
         <title>DC | Full-Stack web develloper</title>
 
         <link rel="stylesheet" href="./css/styles.css">
