--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                         <a href="#estudios">Estudios</a>
                     </li>
                     <li class="navbar__item ">
-                        <a href="#experiencia">Expe<span class="reverse__font">r</span>iencia</a>
+                        <a href="#experiencia">Expe
+                            <span class="reverse__font">r</span>iencia</a>
                     </li>
                     <li class="navbar__item ">
                         <a href="#habilidades">Habilidades</a>
@@ -64,6 +65,10 @@
                     <p>Con ganas de afrontar nuevos proyectos, desenvolviéndome en el terreno web (Front-End y Back-End) para
                         construirme poco a poco como Full-Stack web developer. Dispuesto a mezclar mis conocimientos, mis
                         habilidades y las herramientas necesarias para aportar mi creatividad multimedia a los proyectos.</p>
+                    <div>
+                        <p>Siempre esta bien tener algunos hobbies:</p>
+
+                    </div>
                 </div>
             </div>
         </section>
@@ -285,18 +290,22 @@
                                 <input type="radio" id="Label3" name="radioName" value="3" required>
                                 <label for="LabelOthers">Others</label>
                                 <input type="radio" id="LabelOthers" name="radioName" value="Others" required>
-                                <input type="text" name="nombre" id="nombre" placeholder="Others" required hidden>
+                                <input type="text" name="other" id="other" placeholder="Otros" required>
                             </div>
                         </div>
                         <div class="form-col__right">
                             <div class="form-row">
                                 <textarea name="comtentario" id="comtentario" cols="30" rows="10" placeholder="Comenta"></textarea>
+                                <div class="word__counter">
+                                    <span id="display_count">0</span>/150
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-row__button">
                         <button type="submit" id="enviar" class="form-button">
-                            <span class="reverse__font">E</span>nvi<span class="reverse__font">a</span>r
+                            <span class="reverse__font">E</span>nvi
+                            <span class="reverse__font">a</span>r
                         </button>
                     </div>
                 </form>
@@ -308,8 +317,8 @@
         </footer>
 
         <script src="./js/smoothScroll.js"></script>
-        <script src="./js/scripts/validateForm.js"></script>
-        <script src="./js/scripts/ajax.js"></script>
+        <script src="./js/validateForm.js"></script>
+        <script src="./js/ajax.js"></script>
     </body>
 
     </html>
