add hobbies and animation

--- a/index.html
+++ b/index.html
@@ -66,8 +66,35 @@
                         construirme poco a poco como Full-Stack web developer. Dispuesto a mezclar mis conocimientos, mis
                         habilidades y las herramientas necesarias para aportar mi creatividad multimedia a los proyectos.</p>
                     <div>
-                        <p>Siempre esta bien tener algunos hobbies:</p>
-
+                        <p>Siempre esta bien tener algunas aficiones:</p>
+                        <ul class="hobbies">
+                            <li class="hobbies-item">
+                                <i class="fa fa-book" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-camera" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-film" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-gamepad" aria-hidden="true"></i>
+                            </li>
+                        </ul>
+                        <ul class="hobbies">
+                            <li class="hobbies-item">
+                                <i class="fa fa-laptop" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-map-signs" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-motorcycle" aria-hidden="true"></i>
+                            </li>
+                            <li class="hobbies-item">
+                                <i class="fa fa-bicycle" aria-hidden="true"></i>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -188,7 +215,7 @@
             </div>
         </section>
         <section id="habilidades" class="section-container">
-            <div class="skills container clearfix">
+            <div class="skills container clearfix" id="skills">
                 <h2 class="section__title">Habilidades</h2>
                 <div class="skills-col">
                     <div class="skills-col__left">
