--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                         <a href="#estudios">Estudios</a>
                     </li>
                     <li class="navbar__item ">
-                        <a href="#experiencia">Expe
-                            <span class="reverse__font">r</span>iencia</a>
+                        <a href="#experiencia">Expe<span class="reverse__font">r</span>iencia</a>
                     </li>
                     <li class="navbar__item ">
                         <a href="#habilidades">Habilidades</a>
@@ -331,8 +330,7 @@
                     </div>
                     <div class="form-row__button">
                         <button type="submit" id="enviar" class="form-button">
-                            <span class="reverse__font">E</span>nvi
-                            <span class="reverse__font">a</span>r
+                            <span class="reverse__font">E</span>nvi<span class="reverse__font">a</span>r
                         </button>
                     </div>
                 </form>
